unpackaged/main/default/objects/Notification_Log__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>In_App</fullName>
                <label>In App</label>
            </value>
            <value>
                <fullName>SMS</fullName>
                <isActive>false</isActive>
                <label>SMS</label>
            </value>
            <value>
                <fullName>Zoom</fullName>
                <isActive>false</isActive>
                <label>Zoom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>