unpackaged/main/default/objects/Notification_Log__c/fields/Correlation_Key__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Key__c</fullName>
    <label>Correlation Key</label>
    <length>64</length>
    <type>Text</type>
</CustomField>