unpackaged/main/default/objects/Notification_Log__c/fields/Delivery_Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Attempt_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Delivery Attempt Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>