unpackaged/main/default/objects/Notification_Log__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notification Logs</relationshipLabel>
    <relationshipName>Notification_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>