unpackaged/main/default/objects/Notification_Log__c/fields/Legacy_Notification_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Notification_Id__c</fullName>
    <description>Original Notification__c record Id from data migration.</description>
    <externalId>true</externalId>
    <label>Legacy Notification Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>