unpackaged/main/default/objects/Notification_Log__c/fields/Legacy_Notification_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Notification_Number__c</fullName>
    <description>Original Notification__c auto-number from data migration.</description>
    <label>Legacy Notification Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>