unpackaged/main/default/objects/Notification_Log__c/fields/Notification_Rule__c.field-meta.xml
<CustomField>
    <fullName>Notification_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notification Rule</label>
    <referenceTo>Notification_Rule__c</referenceTo>
    <relationshipLabel>Applied Notification Logs</relationshipLabel>
    <relationshipName>Applied_Notification_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>