unpackaged/main/default/objects/Notification_Log__c/fields/Read_At__c.field-meta.xml
<CustomField>
    <fullName>Read_At__c</fullName>
    <label>Read At</label>
    <type>DateTime</type>
</CustomField>