unpackaged/main/default/objects/Notification_Log__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Notification Logs</relationshipLabel>
    <relationshipName>Notification_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>