unpackaged/main/default/objects/Notification_Log__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Source Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>