unpackaged/main/default/objects/Notification_Log__c/fields/Suppression_Reason__c.field-meta.xml
<CustomField>
    <fullName>Suppression_Reason__c</fullName>
    <label>Suppression Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>