unpackaged/main/default/objects/Notification_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>Delivered_At__c</columns>
    <columns>Frequency__c</columns>
    <columns>Household__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Source_Record_Id__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>